clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bf_layout_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/bf-layout-1.c" (c, x86_64-unknown-linux-gnu)
global a : rec_anon2E0 = Zero { ty: Named("rec_anon2E0") } [external, default, align 8, dso_local]
global b : rec_anon2E1 = Zero { ty: Named("rec_anon2E1") } [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %5 = const 8 : u64i
                %6 = const 8 : u64i
                cmp
                if %7 {
                        %8 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
