clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bf_sign_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/bf-sign-1.c" (c, x86_64-unknown-linux-gnu)
global __const.main.x : rec_anon2E0 = ConstRecord { ty: Named("rec_anon2E0"), members: Array([CirInt { ty: Named("u16i"), value: "511" }, Zero { ty: Array { element_type: Named("u8i"), size: 2 } }]) } [cir_private, default, dso_local, constant]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_anon2E0, "x", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @__const.main.x : rec_anon2E0*
        copy
        scope {
                get_member
                get_bitfield
                %25 = cast(integral) %24 : s32i
                %26 = const 7 : s32i
                cmp
                if %27 {
                        %28 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                get_member
                get_bitfield
                %20 = const -1 : s32i
                cmp
                if %21 {
                        %22 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                get_member
                get_bitfield
                %9 = const -1 : s32i
                cmp
                %11 = ternary %10 ? { : bool
                        get_member
                        get_bitfield
                        %16 = const 7 : s32i
                        cmp
                        yield %17
                } : {
                        %13 = const false : bool
                        yield %13
                }
                if %11 {
                        %12 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %4 = get_global @exit : (s32i) -> void*
        %5 = const 0 : s32i
        call @exit(%5) [all]
        %6 = load %0 : s32i
        return %6
}
