clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bf_sign_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/bf-sign-2.c" (c, x86_64-unknown-linux-gnu)
global x : rec_X = Zero { ty: Named("rec_X") } [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %79 = get_global @x : rec_X*
                get_member
                get_bitfield
                %82 = cast(integral) %81 : s32i
                %83 = const 2 : s32i
                sub
                %85 = const 0 : s32i
                cmp
                if %86 {
                        %87 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %70 = get_global @x : rec_X*
                get_member
                get_bitfield
                %73 = cast(integral) %72 : s32i
                %74 = const 2 : s32i
                sub
                %76 = const 0 : s32i
                cmp
                if %77 {
                        %78 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %61 = get_global @x : rec_X*
                get_member
                get_bitfield
                %64 = cast(integral) %63 : s32i
                %65 = const 2 : s32i
                sub
                %67 = const 0 : s32i
                cmp
                if %68 {
                        %69 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %52 = get_global @x : rec_X*
                get_member
                get_bitfield
                %55 = cast(integral) %54 : s32i
                %56 = const 2 : s32i
                sub
                %58 = const 0 : s32i
                cmp
                if %59 {
                        %60 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %31 = const 4 : u64i
                %32 = const 4 : u64i
                cmp
                if %33 {
                        scope {
                                %43 = get_global @x : rec_X*
                                get_member
                                get_bitfield
                                %46 = cast(integral) %45 : s32i
                                %47 = const 2 : s32i
                                sub
                                %49 = const 0 : s32i
                                cmp
                                if %50 {
                                        %51 = get_global @abort : () -> void*
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                } else {
                        scope {
                                %34 = get_global @x : rec_X*
                                get_member
                                get_bitfield
                                %37 = cast(integral) %36 : s32i
                                %38 = const 2 : s32i
                                sub
                                %40 = const 0 : s32i
                                cmp
                                if %41 {
                                        %42 = get_global @abort : () -> void*
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %22 = get_global @x : rec_X*
                get_member
                get_bitfield
                %25 = cast(integral) %24 : u32i
                %26 = const 2 : u32i
                sub
                %28 = const 0 : u32i
                cmp
                if %29 {
                        %30 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %13 = get_global @x : rec_X*
                get_member
                get_bitfield
                %16 = cast(integral) %15 : s32i
                %17 = const 2 : s32i
                sub
                %19 = const 0 : s32i
                cmp
                if %20 {
                        %21 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %5 = get_global @x : rec_X*
                get_member
                get_bitfield
                %8 = const 2 : u64i
                sub
                %10 = const 0 : u64i
                cmp
                if %11 {
                        %12 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
