clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bitfld_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/bitfld-2.c" (c, x86_64-unknown-linux-gnu)
fn exit(%arg0: s32i) -> void [external, c];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %9 = const 65521 : s32i
                %10 = const 65521 : s32i
                cmp
                if %11 {
                        %12 = get_global @exit : (s32i) -> void*
                        %13 = const 0 : s32i
                        call @exit(%13) [all]
                        yield
                }
                yield
        }
        scope {
                %5 = const 2 : u64i
                %6 = const 2 : u64i
                cmp
                if %7 {
                        %8 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
